...
                .align(Alignment.CenterStart)
        ) {
            OmniSearchField(
                value = query,
                onValueChange = onQueryChange,
                modifier = Modifier
                    .testTag("omni.topbar.globalSearch")
                    .width(searchWidth)
                    .height(metrics.px(28f)),
                focusRequester = focusRequester,
                onEnter = {
                    onNavigateToSearch()
                    onSearch(query)
...
